--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
+* {
+  box-sizing: border-box;
+}
+
+table, td, th {
+  border: 1px solid rgb(112, 159, 165);
+}
 table {
-  border: 1px solid;
+  margin: 1rem;
+}
+td, th {
+  padding: 1rem;
+}
+th {
+  font-weight: bold;
+}
+tfoot {
+  background-color: rgba(112, 159, 165, .1);
 }
