--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
 }
 
+/* Table styles */
 table, td, th {
   border: 2px solid rgb(26, 152, 168);
 }
@@ -21,6 +22,44 @@ th {
 tfoot {
   background-color: rgba(112, 159, 165, .1);
 }
+/* ------------------------ */
+
+/* -- Form styles -- */
+form {
+  width: 100%;
+  margin-top: 2rem;
+  position: relative;
+  right: 130px;
+}
+fieldset {
+  border: 1px solid rgb(112, 159, 165);
+  width: 50%;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+legend {
+  color: rgb(112, 159, 165);
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+
+textarea,
+label,
+input {
+  display: block;
+}
+
+textarea,
+input {
+  margin-bottom: 1rem;
+  margin-top: .5rem;
+}
+
+input[type="number"] {
+  width: 20%;
+}
+
+/* ------------------------------- */
 
 body {
   font-family: Arial, Helvetica, sans-serif;
