--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ th {
   font-weight: bold;
 }
 tfoot {
-  background-color: rgba(112, 159, 165, .1);
+  background-color: rgba(79, 0, 0, 0.1);
 }
 /* ------------------------ */
 
